# keepasssxcli-wrapper

./: README.md  client.py  pyproject.toml  testdb
keepasxcli_wrapper/: client.py  gui.py  server.py
tests/: conftest.py  test_config.py
tests/data/: testdb_1
