[tool.poetry]
name = "keepasxcli-cli"
version = "0.1.0"
description = ""
authors = ["Daniel Barton <daniel.barton@seznam.cz>"]

[tool.poetry.dependencies]
python = "3.7"
click = "^7.1.2"
pexpect = "^4.8.0"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
